JumpScript/tests/baselines/reference/forInStatement4.errors.txt
tests/cases/compiler/forInStatement4.jump(2,10): error TS2404: The left-hand side of a 'for...in' statement cannot use a type annotation.


==== tests/cases/compiler/forInStatement4.jump (1 errors) ====
    var expr: any;
    for (var a: number in expr) {
             ~
!!! error TS2404: The left-hand side of a 'for...in' statement cannot use a type annotation.
    }